syntax = "proto3";

package cache;

option go_package = "github.com/the-monkeys/the_monkeys/microservices/the_monkeys_cache/proto";

// CacheService defines the gRPC service for cache operations
service CacheService {
  // Set stores a value in the cache
  rpc Set(SetRequest) returns (SetResponse) {}
  
  // Get retrieves a value from the cache
  rpc Get(GetRequest) returns (GetResponse) {}
  
  // Delete removes a key from the cache
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
  
  // Clear removes all items from the cache
  rpc Clear(ClearRequest) returns (ClearResponse) {}
  
  // GetStats returns cache statistics
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse) {}
}

// SetRequest represents a request to set a value in the cache
message SetRequest {
  string key = 1;
  bytes value = 2;
  int64 expiration_seconds = 3;
}

// SetResponse represents the response from a Set operation
message SetResponse {
  bool success = 1;
  string error = 2;
}

// GetRequest represents a request to get a value from the cache
message GetRequest {
  string key = 1;
}

// GetResponse represents the response from a Get operation
message GetResponse {
  bool success = 1;
  bytes value = 2;
  string error = 3;
}

// DeleteRequest represents a request to delete a key from the cache
message DeleteRequest {
  string key = 1;
}

// DeleteResponse represents the response from a Delete operation
message DeleteResponse {
  bool success = 1;
  string error = 2;
}

// ClearRequest represents a request to clear all items from the cache
message ClearRequest {}

// ClearResponse represents the response from a Clear operation
message ClearResponse {
  bool success = 1;
  string error = 2;
}

// GetStatsRequest represents a request to get cache statistics
message GetStatsRequest {}

// GetStatsResponse represents the response containing cache statistics
message GetStatsResponse {
  bool success = 1;
  int32 total_items = 2;
  int32 expired = 3;
  int32 active = 4;
  string error = 5;
} 